[package]
name = "wiki-test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
scraper = "0.22.0"
lazy_static = "1.5.0"
regex = "1.11.1"
stop-words = "0.8.0"
rayon = "1.10.0"
