[package]
name = "wiki-info"
version = "0.1.0"
authors = ["Reese Hatfield hatfield.69@wright.edu"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
scraper = "0.22.0"
lazy_static = "1.5.0"
regex = "1.11.1"
rayon = "1.10.0"
percent-encoding = "2.3.1"
log = "0.4.22"
env_logger = "0.11.6"
