[package]
name = "wiki-info"
version = "0.1.0"
authors = ["Reese Hatfield hatfield.69@wright.edu"]
edition = "2021"
description = "A high-speed, blocking, information retrieval API for rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
scraper = "0.22.0"
lazy_static = "1.5.0"
regex = "1.11.1"
rayon = "1.10.0"
log = "0.4.22"
